_includes/patterns/box/index.scss
//Profile Box
.box-component{
    .profile-card{
        background-color: #F2F2F2;
        .usa-card__media{
            background-color: #F2F2F2;
        }
        .usa-card__media--inset{
            padding: 0;
        }
        .usa-card__img{
            padding-top: 0;
        }
        img{
            border: 4px solid #FFFFFF;
            box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
        }
        .usa-card__body{
            display: flex;
            gap: 1rem;
        }
        .name{
            font-size: 1.25rem;
            font-weight: 700;
            font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, "sans-serif";
        }
        .name{
            a:hover{
                color: #1f496f;
            }
        }
        .role{
            font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, "sans-serif";
            color: #272727;
            font-size: 0.875rem;
        }
        .email{
            font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, "sans-serif";
            font-size: 1.125rem;
            font-weight: 300;
        }
        .email:hover{
            color: #1f496f;
        }
        .content-header{
            font-weight: bold;
        }
        .content-list{
            margin-left: 1rem;
        }
        .usa-button-group{
            a{
                color: white;
                border-radius: 0;
                font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, "sans-serif";
                font-size: 1rem;
                font-weight: 600;
            }
            i{
                font-size: 12px;
            }
        }
        .semi-button{
            margin-left: -5px;
            border-left: 1px solid #00bde3;
        }
        .usa-button{
            margin-right: 0;
        }
    }
}
/* ... */

